--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "tinyify": "^2.4.0"
   },
   "dependencies": {
+    "choo-devtools": "^2.5.0",
     "babelify": "^8.0.0",
+    "choo-service-worker": "^2.4.0",
     "watchify": "^3.11.0"
   }
 }
